--- a/samples/fullwindow/index.html
+++ b/samples/fullwindow/index.html
@@ -33,7 +33,9 @@
   </head>
   <body>
     <div id="BotChatGoesHere"></div>
-    <script src="../../botchat.js"></script>
+    <script src="../../botchat.js"></script>   
+     <script src="https://cdn.botframework.com/botframework-webchat/latest/CognitiveServices.js"></script>
+    
     <script>
       const params = BotChat.queryParams(location.search);
 
@@ -49,20 +51,21 @@
 
       window['botchatDebug'] = params['debug'] && params['debug'] === 'true';
 
+      var speechOptions = {
+            speechRecognizer: new CognitiveServices.SpeechRecognizer( { subscriptionKey: '61e0e043d9694cad8dd312ebad3b9568' } ),
+            speechSynthesizer: new CognitiveServices.SpeechSynthesizer(
+                {
+                    subscriptionKey: '61e0e043d9694cad8dd312ebad3b9568',
+                    gender: CognitiveServices.SynthesisGender.Female,
+                    voiceName: 'Microsoft Server Speech Text to Speech Voice (en-US, JessaRUS)'
+                })
+            }
       BotChat.App({
-        bot: bot,
-        locale: params['locale'],
-        resize: 'window',
-        // sendTyping: true,    // defaults to false. set to true to send 'typing' activities to bot (and other users) when user is typing
-        user: user,
-        // locale: 'es-es', // override locale to Spanish
-
-        directLine: {
-          secret: params['s'],
-          token: params['t'],
-          domain: params['domain'],
-          webSocket: params['webSocket'] && params['webSocket'] === 'true' // defaults to true
-        }
+        //directLine: { secret: 'DftF_MpZxoY.cwA.RLc.LzC-Bh5ZLf2jtM0LG_Xn3nK_4p5PpWecZ8RCn6IoWN8' },
+        directLine: { secret: '53oQOJqdxFg.cwA.BkY.h1TdMhlTHcU7o2Gqgz5fXeqRPk_p0AoHQ2aVWd3SrB4' },
+        user: { id: 'userid' },
+        bot: { id: 'botid' },
+        speechOptions: speechOptions
       }, document.getElementById('BotChatGoesHere'));
     </script>
   </body>
