FullWindows userid test

--- a/samples/fullwindow/index.html
+++ b/samples/fullwindow/index.html
@@ -63,7 +63,7 @@
       BotChat.App({
         //directLine: { secret: 'DftF_MpZxoY.cwA.RLc.LzC-Bh5ZLf2jtM0LG_Xn3nK_4p5PpWecZ8RCn6IoWN8' },
         directLine: { secret: '53oQOJqdxFg.cwA.BkY.h1TdMhlTHcU7o2Gqgz5fXeqRPk_p0AoHQ2aVWd3SrB4' },
-        user: { id: 'userid' },
+        user: { id: 'me' },
         bot: { id: 'botid' },
         speechOptions: speechOptions
       }, document.getElementById('BotChatGoesHere'));
