--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             }
       BotChat.App({
         //directLine: { secret: 'DftF_MpZxoY.cwA.RLc.LzC-Bh5ZLf2jtM0LG_Xn3nK_4p5PpWecZ8RCn6IoWN8' },
-        directLine: { secret: '53oQOJqdxFg.cwA.BkY.h1TdMhlTHcU7o2Gqgz5fXeqRPk_p0AoHQ2aVWd3SrB4' },
+        directLine: { secret: 'RFX4hU5snDE.cwA.G68.W6GsvLx1fbumUed2S6GJYzSn7uHvujLwR30o-2aKlu8' },
         user: { id: 'userid' },
         bot: { id: 'botid' },
         speechOptions: speechOptions
